# testFastApi

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 10e8a2968ceb_due_data_t0_due_date.py  2b57a1c4d9e8_add_task_comments_and_activities.py  33b7f7eb3a72_add_ownership_fields.py  45de3c47039d_add_project_member.py  5a96b2e7fcf4_add_projects_table.py  630f133ef368_info.py  662b1a237f2b_add_cascade_to_task_project_foreign_key.py  9d4f2c1a8b6e_add_cascade_to_project_member_project_fk.py  ac15aedf24b3_create_tasks_table.py  b8f67bd0235d_extend_task_collaboration_fields.py  c78d4a561a67_updata_user_datetime.py  cea2fa0ca15f_create_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/routes/: auth.py  health.py  project.py  tasks.py  user.py
app/core/: config.py  security.py
app/crud/: project.py  project_member.py  task.py  user.py
app/data/: taks.py
app/db/: deps.py  session.py
app/models/: __init__.py  project.py  projectMember.py  tasks.py  user.py
app/schemas/: project.py  tasks.py  token.py  user.py
app/services/: project_permission.py  tasks.py
docs/: deployment.md  frontend-api.md
tests/: conftest.py  test_auth.py  test_health.py  test_projects.py  test_tasks.py
